tests/sumo/output/vtypeprobe/errors/freq0/errors.sumo
Warning: VTypeProbes are deprecated. Use fcd-output devices (assigned to the vType) instead.
Error: Sampling frequency must not be zero (in vTypeProbe 'test1').
Quitting (on error).
